--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,22 @@
 Package: bsutils
-Title: What the Package Does (One Line, Title Case)
+Title: 'Shiny' Utilities for 'Bootstrap 5'
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+  c(
+    person(given = "John",
+           family = "Coene",
+           role = c("aut", "cre"),
+           email = "jcoenep@gmail.com",
+           comment = c(ORCID = "0000-0002-6637-4107")),
+    person(family = "Opifex", role = c("fnd"))
+  )
+Description: 'Shiny' utilities for 'Bootstrap 5' to create 
+    elements such as accordions, off-canvas, etc.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Imports: 
+    shiny
+Suggests:
+    bslib
