feat(dropdown): init

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,5 +9,6 @@ export(alertHeading)
 export(collapseButton)
 export(collapseContent)
 export(collapseLink)
+export(dropdownButton)
 import(shiny)
 importFrom(htmltools,tagAppendAttributes)
