feat(offcanvas): init

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(collapseButton,collapseContent)
 S3method(collapseLink,collapseContent)
+S3method(offcanvasButton,offcanvasContent)
 export(accordion)
 export(accordionItem)
 export(alert)
@@ -10,5 +11,9 @@ export(collapseButton)
 export(collapseContent)
 export(collapseLink)
 export(dropdownButton)
+export(offcanvasButton)
+export(offcanvasContent)
+export(offcanvasHeader)
 import(shiny)
 importFrom(htmltools,tagAppendAttributes)
+importFrom(htmltools,tagGetAttribute)
