feat(card): init

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,12 @@ export(accordion)
 export(accordionItem)
 export(alert)
 export(alertHeading)
+export(card)
+export(cardBody)
+export(cardHeader)
+export(cardSubtitle)
+export(cardText)
+export(cardTitle)
 export(collapse)
 export(collapseButton)
 export(collapseContent)
