feat(carousel): init

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,11 +12,15 @@ export(cardHeader)
 export(cardSubtitle)
 export(cardText)
 export(cardTitle)
+export(carousel)
+export(carouselImg)
+export(carouselItem)
 export(collapse)
 export(collapseButton)
 export(collapseContent)
 export(collapseLink)
 export(dropdownButton)
+export(gallery)
 export(offcanvas)
 export(offcanvasButton)
 export(offcanvasContent)
