feat(progress): init

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,10 @@ export(offcanvasButton)
 export(offcanvasContent)
 export(offcanvasHeader)
 export(offcanvasLink)
+export(progress)
+export(progressBar)
+export(update_progress)
 import(shiny)
 importFrom(htmltools,tagAppendAttributes)
 importFrom(htmltools,tagGetAttribute)
+importFrom(utils,packageVersion)
