feat(group): init

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(accordion)
 export(accordionItem)
 export(alert)
 export(alertHeading)
+export(buttonGroup)
 export(card)
 export(cardBody)
 export(cardHeader)
