--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,11 @@ export(offcanvasHeader)
 export(offcanvasLink)
 export(progress)
 export(progressBar)
+export(toast)
+export(toastBody)
+export(toastHeader)
+export(toast_hide)
+export(toast_show)
 export(update_progress)
 import(shiny)
 importFrom(htmltools,tagAppendAttributes)
