feat(modal): init

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,12 +16,21 @@ export(cardTitle)
 export(carousel)
 export(carouselImg)
 export(carouselItem)
+export(closeButton)
 export(collapse)
 export(collapseButton)
 export(collapseContent)
 export(collapseLink)
 export(dropdownButton)
 export(gallery)
+export(modal)
+export(modalBody)
+export(modalFooter)
+export(modalHeader)
+export(modalTitle)
+export(modal_hide)
+export(modal_show)
+export(modal_toggle)
 export(offcanvas)
 export(offcanvasButton)
 export(offcanvasContent)
