feat(tooltips): init

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(toastHeader)
 export(toast_hide)
 export(toast_show)
 export(update_progress)
+export(withTooltip)
 import(shiny)
 importFrom(htmltools,tagAppendAttributes)
 importFrom(htmltools,tagGetAttribute)
