feat(list): init

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,8 @@ export(collapseContent)
 export(collapseLink)
 export(dropdownButton)
 export(gallery)
+export(listGroup)
+export(listGroupItem)
 export(modal)
 export(modalBody)
 export(modalFooter)
