feat(popover): init

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(toastHeader)
 export(toast_hide)
 export(toast_show)
 export(update_progress)
+export(withPopover)
 export(withTooltip)
 import(shiny)
 importFrom(htmltools,tagAppendAttributes)
