feat(modal): add UI triggers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,8 +27,10 @@ export(listGroup)
 export(listGroupItem)
 export(modal)
 export(modalBody)
+export(modalButton)
 export(modalFooter)
 export(modalHeader)
+export(modalLink)
 export(modalTitle)
 export(modal_hide)
 export(modal_show)
