--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(collapse,collapseTrigger)
 S3method(offcanvas,offcanvasTrigger)
+S3method(offcanvas,shiny.tag)
 export(accordion)
 export(accordionItem)
 export(alert)
@@ -40,6 +41,9 @@ export(offcanvasButton)
 export(offcanvasContent)
 export(offcanvasHeader)
 export(offcanvasLink)
+export(offcanvas_hide)
+export(offcanvas_show)
+export(offcanvas_toggle)
 export(progress)
 export(progressBar)
 export(toast)
