feat(floating): init text input

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(collapseButton)
 export(collapseContent)
 export(collapseLink)
 export(dropdownButton)
+export(floatingTextInput)
 export(gallery)
 export(listGroup)
 export(listGroupItem)
