feat(select): select input

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,5 +58,6 @@ export(withPopover)
 export(withTooltip)
 import(shiny)
 importFrom(htmltools,tagAppendAttributes)
+importFrom(htmltools,tagAppendChild)
 importFrom(htmltools,tagGetAttribute)
 importFrom(utils,packageVersion)
