feat(switch): init

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(collapseButton)
 export(collapseContent)
 export(collapseLink)
 export(dropdownButton)
+export(floatingSelectInput)
 export(floatingTextAreaInput)
 export(floatingTextInput)
 export(gallery)
