feat: color input

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(collapse)
 export(collapseButton)
 export(collapseContent)
 export(collapseLink)
+export(colorPickerInput)
 export(dropdownButton)
 export(floatingSelectInput)
 export(floatingTextAreaInput)
@@ -49,6 +50,7 @@ export(offcanvas_show)
 export(offcanvas_toggle)
 export(progress)
 export(progressBar)
+export(switchInput)
 export(toast)
 export(toastBody)
 export(toastHeader)
