--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(toastBody)
 export(toastHeader)
 export(toast_hide)
 export(toast_show)
+export(update_color_picker)
 export(update_progress)
 export(withPopover)
 export(withTooltip)
