feat(range): init

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ export(toast_hide)
 export(toast_show)
 export(update_color_picker)
 export(update_progress)
+export(update_range)
 export(withPopover)
 export(withTooltip)
 import(shiny)
