feat(textGroup): init

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,7 +50,9 @@ export(offcanvas_show)
 export(offcanvas_toggle)
 export(progress)
 export(progressBar)
+export(rangeInput)
 export(switchInput)
+export(textGroupInput)
 export(toast)
 export(toastBody)
 export(toastHeader)
@@ -59,10 +61,13 @@ export(toast_show)
 export(update_color_picker)
 export(update_progress)
 export(update_range)
+export(update_text_group)
 export(withPopover)
 export(withTooltip)
 import(shiny)
+importFrom(htmltools,attachDependencies)
 importFrom(htmltools,tagAppendAttributes)
 importFrom(htmltools,tagAppendChild)
+importFrom(htmltools,tagAppendChildren)
 importFrom(htmltools,tagGetAttribute)
 importFrom(utils,packageVersion)
