--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(accordion)
 export(accordionItem)
 export(alert)
 export(alertHeading)
+export(badge)
 export(buttonGroup)
 export(card)
 export(cardBody)
