feat(alert): toggle from server

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(accordion)
 export(accordionItem)
 export(alert)
 export(alertHeading)
+export(alert_hide)
+export(alert_show)
 export(asPlaceholder)
 export(badge)
 export(buttonGroup)
