feat: offcanvas button with tooltip

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(modal_show)
 export(modal_toggle)
 export(offcanvas)
 export(offcanvasButton)
+export(offcanvasButtonWithTooltip)
 export(offcanvasContent)
 export(offcanvasHeader)
 export(offcanvasLink)
